--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="styles.css">
     <script type="text/html" id="albumTmpl">
-      <div class="album1">
+      <div class="album<%= album %>" rel="<%= name %>">
         <a href=""><img src="<%= photo1 %>"></a>
       </div>
     </script>
@@ -19,78 +19,23 @@
     </section>
 
     <section class="leftMenu">
+      <div class="albumButtons">
+        <a href=""><button class="allAlbumButton" type="button" name="All Albums">All Albums</button></a>
+        <a href=""><button class="albumButton1" type="button" name="Album 1">Album 1</button></a>
+        <a href=""><button class="albumButton2" type="button" name="Album 2">Album 2</button></a>
+        <a href=""><button class="albumButton3" type="button" name="Album 3">Album 3</button></a>
+        <a href=""><button class="albumButton4" type="button" name="Album 4">Album 4</button></a>
+        <a href=""><button class="albumButton5" type="button" name="Album 5">Album 5</button></a>
+        <a href=""><button class="albumButton6" type="button" name="Album 6">Album 6</button></a>
+      </div>
 
-      <section class="photosView1 hidden">
-        <div class="albumButtons">
-          <a href=""><button class="allAlbumButton" type="button" name="All Albums">All Albums</button></a>
-          <a href=""><button class="albumButton1" type="button" name="Album 1">Album 1</button></a>
-          <a href=""><button class="albumButton2" type="button" name="Album 2">Album 2</button></a>
-          <a href=""><button class="albumButton3" type="button" name="Album 3">Album 3</button></a>
-          <a href=""><button class="albumButton4" type="button" name="Album 4">Album 4</button></a>
-          <a href=""><button class="albumButton5" type="button" name="Album 5">Album 5</button></a>
-          <a href=""><button class="albumButton6" type="button" name="Album 6">Album 6</button></a>
-        </div>
-      </section>
-
-      <section class="photosView2 hidden">
-        <div class="albumButtons">
-          <button class="allAlbumButton" type="button" name="All Albums">All Albums</button>
-          <button class="albumButton1" type="button" name="Album 1">Album 1</button>
-          <button class="albumButton2" type="button" name="Album 2">Album 2</button>
-          <button class="albumButton3" type="button" name="Album 3">Album 3</button>
-          <button class="albumButton4" type="button" name="Album 4">Album 4</button>
-          <button class="albumButton5" type="button" name="Album 5">Album 5</button>
-          <button class="albumButton6" type="button" name="Album 6">Album 6</button>
-        </div>
-      </section>
-      <section class="photosView3 hidden">
-        <div class="albumButtons">
-          <button class="allAlbumButton" type="button" name="All Albums">All Albums</button>
-          <button class="albumButton1" type="button" name="Album 1">Album 1</button>
-          <button class="albumButton2" type="button" name="Album 2">Album 2</button>
-          <button class="albumButton3" type="button" name="Album 3">Album 3</button>
-          <button class="albumButton4" type="button" name="Album 4">Album 4</button>
-          <button class="albumButton5" type="button" name="Album 5">Album 5</button>
-          <button class="albumButton6" type="button" name="Album 6">Album 6</button>
-        </div>
-      </section>
-      <section class="photosView4 hidden">
-        <div class="albumButtons">
-          <button class="allAlbumButton" type="button" name="All Albums">All Albums</button>
-          <button class="albumButton1" type="button" name="Album 1">Album 1</button>
-          <button class="albumButton2" type="button" name="Album 2">Album 2</button>
-          <button class="albumButton3" type="button" name="Album 3">Album 3</button>
-          <button class="albumButton4" type="button" name="Album 4">Album 4</button>
-          <button class="albumButton5" type="button" name="Album 5">Album 5</button>
-          <button class="albumButton6" type="button" name="Album 6">Album 6</button>
-        </div>
-      </section>
-      <section class="photosView5 hidden">
-        <div class="albumButtons">
-          <button class="allAlbumButton" type="button" name="All Albums">All Albums</button>
-          <button class="albumButton1" type="button" name="Album 1">Album 1</button>
-          <button class="albumButton2" type="button" name="Album 2">Album 2</button>
-          <button class="albumButton3" type="button" name="Album 3">Album 3</button>
-          <button class="albumButton4" type="button" name="Album 4">Album 4</button>
-          <button class="albumButton5" type="button" name="Album 5">Album 5</button>
-          <button class="albumButton6" type="button" name="Album 6">Album 6</button>
-        </div>
-      </section>
-      <div class="photosView6 hidden">
-        <div class="albumButtons">
-          <button class="allAlbumButton" type="button" name="All Albums">All Albums</button>
-          <button class="albumButton1" type="button" name="Album 1">Album 1</button>
-          <button class="albumButton2" type="button" name="Album 2">Album 2</button>
-          <button class="albumButton3" type="button" name="Album 3">Album 3</button>
-          <button class="albumButton4" type="button" name="Album 4">Album 4</button>
-          <button class="albumButton5" type="button" name="Album 5">Album 5</button>
-          <button class="albumButton6" type="button" name="Album 6">Album 6</button>
-        </div>
-      </section>
+      <section class="photosView1 hidden" rel="cats"></section>
+      <section class="photosView2 hidden"></section>
+      <section class="photosView3 hidden"></section>
+      <section class="photosView4 hidden"></section>
+      <section class="photosView5 hidden"></section>
+      <section class="photosView6 hidden"></section>
    </section>
-
-
-
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
